--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<h1>
-My name is Finn
-</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Finn's website</title>
+</head>
+<body>
+    <h1>
+        My name is Finn
+    </h1>
+
+    <p>
+        Thank you Mr. Rigby
+    </p>
+</body>
+</html>
+
+
+
